Fix word break at components (#195)

--- a/src/components/cards/cardProblem/cardProblem.module.css
+++ b/src/components/cards/cardProblem/cardProblem.module.css
@@ -83,6 +83,7 @@
 
     font-weight: 600;
     font-size: 18px;
+    word-break: break-all;
 }
 
 .tagsContainer {
